--- a/frontend/src/app/settings/profiles/show-profiles/show-profiles.component.scss
+++ b/frontend/src/app/settings/profiles/show-profiles/show-profiles.component.scss
@@ -57,6 +57,7 @@
   background-color: var(--color-surface-container);
   color: var(--color-on-surface);
   cursor: pointer;
+  text-decoration: none;
 
   @media (max-width: 765px) {
     margin: auto;
